# delaunayn

./: .gitignore  README.md  delaunayn.cabal  rgl.txt  stack.yaml  zz5.txt
C/: convexhull.c  convexhull.h  delaunay.c  delaunay.h  delaunay0.c  delaunay000.c  delaunay2.c  delaunay2.h  result.h  utils.c  utils.h
Rplots/: squareLattice.R  squareLattice01.R  voronoi_circle00.R
hsc/: convexhull.h  convexhull.hs  convexhull.hsc  delaunay.h  delaunay.hs  delaunay.hsc  delaunay2.h  delaunay2.hs  delaunay2.hsc  result.h  result.hs  result.hsc
rgl/: .Rhistory  anim.R  convexhull00.R  convexhull01.R  convexhull02.R  convexhull03.R  convexhull04.R  delaunay_rhombicDodecahedron.R  rgg.R  voronoi_cuboctahedron.R  voronoi_cuboctahedron00.R  voronoi_cuboctahedron01.R  voronoi_cuboctahedron02.R  voronoi_faceCenteredCubic.R  voronoi_sphere.R
src/: CDelaunay.hs  ConvexHull.hs  Delaunay.hs  Delaunay2.hs  Delaunay_old.hs  Result.hs  TemporaryFile.hs  Voronoi.hs  Voronoi2D.hs  Voronoi2D_old.hs  Voronoi3D.hs  Voronoi3D_old.hs  Voronoi3D_oold.hs  VoronoiShared.hs
src-exe/: Main.hs
src-exe/ConvexHull/: Main.hs
src-exe/Delaunay/: Main.hs  rhombicDodecahedron.hs
src-exe/Delaunay2/: Main.hs
src/ConvexHull/: CConvexHull.hs  ConvexHull.hs  Examples.hs  Types.hs
src/Delaunay/: CDelaunay.hs  Delaunay.hs  Types.hs
src/Delaunay2/: CDelaunay.hs  Delaunay.hs  Types.hs
