name:                delaunayn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/delaunayn#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description:
    Build the executable.
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Delaunay
                     , Delaunay.Delaunay
                     , Delaunay.CDelaunay
                     , Delaunay.Types
                     , Delaunay2
                     , Delaunay2.Delaunay
                     , Delaunay2.CDelaunay
                     , Delaunay2.Types
                     , TemporaryFile
                     , Voronoi2D
                     , Voronoi3D
                     , Voronoi
                     , ConvexHull
                     , ConvexHull.ConvexHull
                     , ConvexHull.CConvexHull
                     , ConvexHull.Types
                     , ConvexHull.Examples
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , split
                     , path
                     , containers
                     , pretty-show
                     , extra
                     , ilist
                     , hashable
                     , unordered-containers
                     , random
  other-extensions:    ForeignFunctionInterface
                    --  , DuplicateRecordFields
  default-language:    Haskell2010
  include-dirs:        C
  C-sources:           C/libqhull_r.c
                     , C/geom_r.c
                     , C/geom2_r.c
                     , C/global_r.c
                     , C/io_r.c
                     , C/mem_r.c
                     , C/merge_r.c
                     , C/poly_r.c
                     , C/poly2_r.c
                     , C/qset_r.c
                     , C/random_r.c
                     , C/usermem_r.c
                     , C/userprintf_r.c
                     , C/user_r.c
                     , C/stat_r.c
                     , C/delaunay.c
                     , C/convexhull.c
                     , C/utils.c
                     , C/delaunay2.c
  ghc-options:         -O0 -Wall

-- executable test_delaunay
--   if flag(exe)
--     buildable:         True
--   else
--     buildable:         False
--   hs-source-dirs:      src-exe/Delaunay
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , delaunayn
--                      , pretty-show
--                      , extra
--                      , containers
--                      , ilist
--                      , Unique
--                      , not-gloss
--                      , linear

executable test_delaunay2
  if flag(exe)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src-exe/Delaunay2
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , delaunayn
                     , pretty-show

-- executable test_convexhull
--   if flag(exe)
--     buildable:         True
--   else
--     buildable:         False
--   hs-source-dirs:      src-exe/ConvexHull
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , delaunayn
--                      , pretty-show
--                      , containers

source-repository head
  type:     git
  location: https://github.com/stla/delaunayn
